2008-04-24  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	Back to development -> 0.10.8.1

=== release 0.10.8 ===

2008-04-23  Jan Schmidt <jan.schmidt@sun.com>

	* configure.ac:
	  releasing 0.10.8, "One For The Money"

2008-04-22  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	0.10.7.4 pre-release

2008-04-22  Jan Schmidt  <jan.schmidt@sun.com>

	* gst/goom/config_param.c: (goom_plugin_parameters_free):
	* gst/goom/convolve_fx.c: (convolve_init), (convolve_free):
	* gst/goom/filters.c: (zoomFilterVisualFXWrapper_free):
	* gst/goom/flying_stars_fx.c: (fs_free):
	* gst/goom/goom_config_param.h:
	* gst/goom/goom_core.c: (goom_init), (goom_close):
	* gst/goom/goom_plugin_info.h:
	* gst/goom/gstgoom.c: (gst_goom_finalize):
	* gst/goom/lines.c: (goom_lines_free):
	* gst/goom/plugin_info.c: (plugin_info_init), (plugin_info_free):
	* gst/goom/surf3d.c: (grid3d_free):
	* gst/goom/surf3d.h:
	* gst/goom/tentacle3d.c: (tentacle_free):
	Free a bunch of stuff, and initialise things to fix leaks
	and valgrind warnings in the testsuite.

	Fixes: #529268

2008-04-21  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtsp/gstrtspsrc.c: (gst_rtspsrc_init), (request_pt_map),
	(gst_rtspsrc_configure_caps):
	Ref caps as the return value for the request_pt_map signal.
	Remove some caps weirdness when configuring a stream. See #528245.

2008-04-18  Tim-Philipp Müller  <tim at centricular dot net>

	* tests/icles/gdkpixbufsink-test.c:
	  Add cast to placate gcc 4.1.2.

2008-04-16  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	0.10.7.3 pre-release

2008-04-16  Jan Schmidt  <jan.schmidt@sun.com>

	* tests/check/Makefile.am:
	Disable some more elements in the state test.
	Add a define so the soup test can find the test files
	it needs at runtime.

	* tests/check/elements/souphttpsrc.c: (run_server):

	Add a define so the soup test can find the test files
	it needs at runtime.

2008-04-17  Jan Schmidt  <Jan.Schmidt@sun.com>
